Add u-net baseline keras version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Project_optimizing_U-net/data
+Project_optimizing_U-net/weights
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,visualstudiocode
