--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Project_optimizing_U-net/data
 Project_optimizing_U-net/weights
+Project_optimizing_U-net/.ipynb_checkpoints/
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,visualstudiocode
