--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Project_optimizing_U-net/src/test
 Project_optimizing_U-net/data
 Project_optimizing_U-net/weights
 Project_optimizing_U-net/.ipynb_checkpoints/
